<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cn.irving.zhao.platform</groupId>
    <artifactId>platform-parent</artifactId>
    <version>1.0.2</version>
    <modules>
        <module>core-dao</module>
        <module>core-spring</module>
        <module>util-base</module>
        <module>util-freemarker</module>
        <module>util-poi</module>
        <module>util-remote-http</module>
        <module>util-remote-mina</module>
        <module>util-remote-weixin-base</module>
        <module>util-remote-weixin-mp</module>
        <!--<module>util-remote-netty</module>-->
        <module>util-shiro</module>
    </modules>
    <packaging>pom</packaging>

    <properties>
        <platform.version>1.0.2</platform.version>
        <java.compile.plugin.version>3.7.0</java.compile.plugin.version>
        <resource.compile.plugin.version>3.0.2</resource.compile.plugin.version>
        <war.package.plugin.version>3.2.0</war.package.plugin.version>
        <java.version>11</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <slf4j.version>1.7.25</slf4j.version>
        <junit.version>4.12</junit.version>

        <poi.version>3.17</poi.version>

        <common.collection.version>4.1</common.collection.version>
        <common.pool.version>2.5.0</common.pool.version>
        <common.lang.version>3.7</common.lang.version>

        <jackson.version>2.9.6</jackson.version>

        <jedis.version>2.9.0</jedis.version>

        <httpclient.version>5.0-alpha1</httpclient.version>

        <mina.version>2.0.16</mina.version>

        <shiro.version>1.4.0</shiro.version>

        <spring.version>5.0.9.RELEASE</spring.version>
        <spring.boot.version>2.0.5.RELEASE</spring.boot.version>

        <druid.version>1.1.6</druid.version>

        <mysql.version>6.0.6</mysql.version>

        <mybatis.version>3.4.6</mybatis.version>
        <mybatis-spring.version>1.3.2</mybatis-spring.version>

        <tkMapper.version>4.0.4</tkMapper.version>
        <pageHelper.version>5.0.4</pageHelper.version>

        <shiro.version>1.4.0</shiro.version>

        <aspectjweaver.version>1.9.1</aspectjweaver.version>

        <java.servlet.version>4.0.0</java.servlet.version>

        <jetty.version>9.4.8.v20171121</jetty.version>
        <lombok.version>1.18.6</lombok.version>
    </properties>

    <dependencies>

        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>1.3.1</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <distributionManagement>
        <repository>
            <id>xlb-release</id>
            <name>xlb-release</name>
            <url>http://mvn.gaogeche.cn/repository/xlb-release/</url>
        </repository>
        <snapshotRepository>
            <id>xlb-snapshot</id>
            <name>xlb-snapshot</name>
            <url>http://mvn.gaogeche.cn/repository/xlb-snapshot/</url>
        </snapshotRepository>
    </distributionManagement>

    <build>

        <plugins>
            <!-- Java 编译插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${java.compile.plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <failOnError>true</failOnError>
                    <showWarnings>true</showWarnings>
                </configuration>
            </plugin>

            <!-- 资源文件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${resource.compile.plugin.version}</version>
                <executions>
                    <execution>
                        <phase>compile</phase>
                    </execution>
                </executions>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.0.1</version>
                <configuration>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- 生成sources源码包的插件 -->
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.1</version>
                <configuration>
                    <attach>true</attach>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>

    </build>

</project>